# fad

./: .gitignore  CMakeLists.txt  Makefile  README.md
cfg/: fad.conf  fad.service
src/: Makefile  autoclosefd.hpp  config.cpp  config.hpp  fad.cpp  fanotify.cpp  fanotify.hpp  fanotifyerror.hpp  log.cpp  log.hpp  metadataworker.cpp  metadataworker.hpp  pid.cpp  pid.hpp  report.hpp
